--- a/index.html
+++ b/index.html
@@ -101,24 +101,24 @@
     <section class="products">
       <div class="container">
         <ul class="filter">
+          <li class="filter__item">
+            <a href="#" data-filter="popular" class="filter__link">Популярное</a>
+          </li>
           <li class="filter__item filter__item--active">
-            <a href="#" class="filter__link">Популярное</a>
+            <a href="#" data-filter="new" class="filter__link">Новинки</a>
           </li>
           <li class="filter__item">
-            <a href="#" class="filter__link">Новинки</a>
+            <a href="#" data-filter="bestsellers" class="filter__link">Бестселлеры</a>
           </li>
           <li class="filter__item">
-            <a href="#" class="filter__link">Бестселлеры</a>
+            <a href="#" data-filter="specials" class="filter__link">Специальные предложения</a>
           </li>
           <li class="filter__item">
-            <a href="#" class="filter__link">Специальные предложения</a>
-          </li>
-          <li class="filter__item">
-            <a href="#" class="filter__link">Скоро в продаже</a>
+            <a href="#" data-filter="soon" class="filter__link">Скоро в продаже</a>
           </li>
         </ul>
         <ul class="products__list">
-          <li class="products__item">
+          <li class="products__item new soon bestsellers">
             <div class="products__price">
               <div class="products__price-amount">1 800</div>
             </div>
@@ -132,7 +132,7 @@
               </div>
             </div>
           </li>
-          <li class="products__item">
+          <li class="products__item new soon popular bestsellers">
             <div class="products__price">
               <div class="products__price-amount">1 800</div>
             </div>
@@ -146,7 +146,7 @@
               </div>
             </div>
           </li>
-          <li class="products__item products__item--color-black products__item--size-double">
+          <li class="products__item products__item--color-black products__item--size-double new popular specials">
             <div class="products__price">
               <div class="products__price-amount">1 800</div>
             </div>
@@ -160,7 +160,7 @@
               </div>
             </div>
           </li>
-          <li class="products__item products__item--color-black products__item--size-double">
+          <li class="products__item products__item--color-black products__item--size-double new soon specials">
             <div class="products__price">
               <div class="products__price-amount">1 800</div>
             </div>
@@ -174,7 +174,7 @@
               </div>
             </div>
           </li>
-          <li class="products__item">
+          <li class="products__item new popular bestsellers">
             <div class="products__price">
               <div class="products__price-amount">1 800</div>
             </div>
@@ -188,7 +188,7 @@
               </div>
             </div>
           </li>
-          <li class="products__item">
+          <li class="products__item new popular bestsellers">
             <div class="products__price">
               <div class="products__price-amount">1 800</div>
             </div>
@@ -351,7 +351,10 @@
       </div>
     </footer>
   </div>
+
+  <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
   <script src="./scripts/sidebar-menu.js"></script>
   <script src="./scripts/fade-slider.js"></script>
+  <script src="./scripts/filter.js"></script>
 </body>
 </html>
